labs/kubernetes/12-ingress-configmaps-secrets/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw12
  labels:
    homework: session-12
