labs/kubernetes/12-ingress-configmaps-secrets/manifests/08-fixed-secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: yatri-secret-consumer
  namespace: hw12
  labels:
    app: secret-consumer
spec:
  restartPolicy: Never
  containers:
    - name: app
      image: busybox:1.36
      command:
        - sh
        - -c
        - echo "started with user=${POSTGRES_USER}"; sleep 3600
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 50m
          memory: 32Mi
